--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div class="resume">
    <div class="resume_left">
      <div class="resume_profile">
-       <img src=".jpg" alt="profile_pic">
+       <img src="2x2github.jpg" alt="profile_pic">
      </div>
      <div class="resume_content">
        <div class="resume_item resume_info">
