--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
            </li>
            <li>
              <div class="icon">
-               <i class="fab fa-weebly"></i>
+                <i class="fab fa-github"></i>
              </div>
              <div class="data">
               https://github.com/cyrilkate1/CV 
              </div>
            </li>
          </ul>
-       </div>
-       <div class="resume_item resume_skills">
+        </div>
+        <div class="resume_item resume_skills">
          <div class="title">
            <p class="bold">skill's</p>
          </div>
@@ -59,7 +59,7 @@
              <div class="skill_progress">
                <span style="width: 70%;"></span>
              </div>
-             <div class="skill_per">95%</div>
+             <div class="skill_per">85%</div>
            </li>
            <li>
              <div class="skill_name">
@@ -68,7 +68,7 @@
              <div class="skill_progress">
                <span style="width: 70%;"></span>
              </div>
-             <div class="skill_per">95%</div>
+             <div class="skill_per">83%</div>
            </li>
            <li>
              <div class="skill_name">
@@ -77,7 +77,7 @@
              <div class="skill_progress">
                <span style="width: 70%;"></span>
              </div>
-             <div class="skill_per">97%</div>
+             <div class="skill_per">86%</div>
            </li>
            <li>
              <div class="skill_name">
@@ -86,7 +86,7 @@
              <div class="skill_progress">
                <span style="width: 70%;"></span>
              </div>
-             <div class="skill_per">87%</div>
+             <div class="skill_per">88%</div>
            </li>
            <li>
              <div class="skill_name">
@@ -95,7 +95,7 @@
              <div class="skill_progress">
                <span style="width: 70%;"></span>
              </div>
-             <div class="skill_per">99%</div>
+             <div class="skill_per">85%</div>
            </li>
          </ul>
        </div>
