--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <script src="https://kit.fontawesome.com/0298c3d3d3.js"></script>
-<link rel="stylesheet" href="script.css">
-
+<link rel="stylesheet"href="script.css">
 <div class="resume">
    <div class="resume_left">
      <div class="resume_profile">
-       <img src="2x2github.jpg" alt="profile_pic">
+       <img src="sumoroycvimg.jpg" alt="profile_pic">
      </div>
      <div class="resume_content">
        <div class="resume_item resume_info">
@@ -73,7 +72,7 @@
            <li>
              <div class="skill_name">
                php
-             </div>
+              </div>
              <div class="skill_progress">
                <span style="width: 70%;"></span>
              </div>
